--- a/css/index.css
+++ b/css/index.css
@@ -107,18 +107,28 @@ h1 {
 	padding-left: 100px;
 }
 
+.columnWrapper{
+	float:left;
+	width:80%;
+}
+
 .sidebarOne{
   float: left;
-  width: 20%;
+  width: 25%;
   padding: 0 20px 0 10px;
 }
 
 .main {
-  float: left;
-  width: 60%;
+  float: right;
+  width: 75%;
   padding: 0 20px;
   border-left: dashed 1px rgb(153,153,153);
   border-right: dashed 1px rgb(153,153,153);
+}
+
+.limeric{
+	line-height: 50%;
+	font-style:italic;
 }
 
 aside h2 {
@@ -163,6 +173,76 @@ footer a {
   padding: 0 10px 0 20px;
 }
 
+img {
+max-width: 100%;
+}
+
+img.half {
+max-width: 50%;
+}
+
+img.left {
+float: left;
+margin: 0 10px 10px 0;
+}
+
+img.right {
+float: right;
+margin: 0 0 10px 10px;
+}
+
 footer {
   clear: both;	
+}
+
+@media (min-width: 481px) and (max-width:768px) {
+	.sidebarTwo{
+		float: none;
+		width: auto;
+		clear: both;
+		border-top: 2px solid black;
+		padding-top: 10px;
+	}	
+	.columnWrapper {
+		width: auto;
+	}
+	
+	.main {
+		border-right: none;
+	}
+}
+
+@media (max-width:480px) {
+	.columnWrapper, .main, .sidebarOne, .sidebarTwo {
+		float: none;
+		width: auto;
+	}
+	
+	.main {
+		border: none;
+	}
+	
+	.sidebarOne, .sidebarTwo {
+		border-top: 2px solid black;
+		margin-top: 25px;
+		padding-top: 10px;
+	}
+	
+	header h1 {
+		font-size: 1.5em;
+	}
+	
+	nav {
+		text-align: center;
+	}
+	
+	nav li {
+		float: none;
+		display: inline-block;
+	}
+	nav a {
+		float: none;
+		display: inline-block;
+		border: none;
+	}
 }
